// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Verify that the path to the about screen exists 1`] = `
<a
  href="/about"
  onClick={[Function]}
/>
`;

exports[`Verify that the path to the questions screen exists 1`] = `
<a
  href="/questions"
  onClick={[Function]}
/>
`;
